fix scroll overflow

--- a/client/src/components/ForcastContainer.css
+++ b/client/src/components/ForcastContainer.css
@@ -7,6 +7,7 @@
   padding: 0.6em;
   background: primary-white;
   border-radius: 1.2em;
+  overflow: scroll;
 }
 
 @media (min-width: 800px) {
